2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Remove unneeded
	field and parameter. Rename SetCurrentMode to UpdateEditMode.

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Fire an OnChanged
	event when the UseViModes setting changes, so that the setting is
	applied by open editors.

2008-10-15  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Refactor.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Add :make command.

2008-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Track API.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.mdp: Updated.

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Add an option for
	enabling vi modes.

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs: Add UI
	for enabling vi modes.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Allow enabling the
	vi mode without recompilation.

	* Makefile.am:
	* MonoDevelop.SourceEditor.mdp: Updated.

	* MonoDevelop.SourceEditor/IdeViMode.cs: Add support for simple vi
	commands.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Restore
	functionality to pop up context menu at caret if activated by key
	press.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed 'Bug 434165 - Page
	UP/Down Key on top/bottom of a code folded make the region Unfolded'.

2008-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed 'Bug 433271 -
	Problems with code completion while creating #regions'.
